[FIX] fix travel, bank account, and image travel fitur